test/asm/divzero-section-bank.out
ERROR: divzero-section-bank.asm(1):
	division by zero
